# xollvm

./: .gitignore  AntiDecompiler.cpp  AntiOptimizationShield.cpp  BogusControlFlow.cpp  CMakeLists.txt  ConstantEncryption.cpp  DebugInfoPreserver.cpp  EHUtils.cpp  Flattening.cpp  FunctionMerging.cpp  FunctionObfContextAnalysis.cpp  MBAObfuscation.cpp  MBAUtils.cpp  ObfDebug.cpp  ObfMetrics.cpp  ObfReport.cpp  ObfuscationAnnotationAnalysis.cpp  ObfuscationConfig.cpp  ObfuscationOptions.cpp  ObfuscationPipeline.cpp  OpaqueUtils.cpp  README.md  SemanticDiffusion.cpp  SplitBasicBlock.cpp  StringEncryption.cpp  Substitution.cpp  TESTS.md  TargetCompat.cpp  USER.md  Utils.cpp  VM.md  VMPass.cpp  VMPass_Emitter.cpp  VMPass_Impl.cpp  VMPass_Verifier.cpp  VirtualCall.cpp
.github/workflows/: release.yml
ADec/: ArchBackend.cpp  Arch_AArch64.cpp  Arch_X86_64.cpp  GadgetPool.cpp  Tech_AliasConfusion.cpp  Tech_AsmGadgets.cpp  Tech_CallTrampoline.cpp  Tech_ConstLaunder.cpp  Tech_DeadDecoy.cpp  Tech_FakeLoop.cpp  Tech_IndirectBr.cpp  Tech_RdtscStretch.cpp  Tech_StackPollution.cpp  Technique.cpp
aes_stub/: CMakeLists.txt  aes_bin2c.py  aes_stub.c
docs/: BUILD.md  DEV.md  FMERGE.md  TESTS.md  USER.md  VM.md  obf_annotations.h
include/llvm/Transforms/: Obfuscator.h
include/llvm/Transforms/Obfuscator/: AESStubBitcode.h  AntiDecompiler.h  AntiOptimizationShield.h  BogusControlFlow.h  ConstantEncryption.h  DebugInfoPreserver.h  EHUtils.h  Flattening.h  FunctionMerging.h  FunctionObfContext.h  FunctionObfContextAnalysis.h  IRBudget.h  MBAObfuscation.h  MBAUtils.h  ObfDebug.h  ObfMetrics.h  ObfRepairSSA.h  ObfReport.h  ObfVerify.h  ObfuscationAnnotationAnalysis.h  ObfuscationConfig.h  ObfuscationOptions.h  ObfuscationPipeline.h  OpaqueUtils.h  PassCtx.h  PassIds.h  PassRng.h  Rng.h  SeedManifest.h  SemanticDiffusion.h  SplitBasicBlock.h  StringEncryption.h  Substitution.h  TargetCompat.h  Utils.h  VMPass.h  VMPass_Emitter.h  VMPass_ISA.h  VMPass_Impl.h  VMPass_Verifier.h  (+1 more)
include/llvm/Transforms/Obfuscator/ADec/: ArchBackend.h  GadgetPool.h  Technique.h  Types.h
registration/: ObfPasses.inc  PluginEntry.cpp
utils/: cfg_svg.py  obf_cross_test_wsl.py  obf_report_html.py  obf_runtime_tests.py  obf_runtime_tests_with_reports.py
utils/cases/: __init__.py  _common.py  _runner.py  adec.py  budget.py  constenc.py  edge.py  eh.py  exhaustive.py  extended.py  features.py  fmerge.py  passes.py  seed.py  strenc.py  vm.py
utils/deobf_bench/: cases.py
utils/deobf_bench/attacks/: string_extract.py
utils/gates/: __init__.py  _ir.py  adec.py  aes_stub.py  budget.py  constenc.py  fmerge.py  mba.py  seed.py  strenc.py  vm.py  vm_engine.py  vm_hardened.py  vm_regenc.py
utils/programs/: __init__.py
utils/programs/aes_stub/: obfuscated.c.tmpl  passes.c.tmpl
utils/programs/base/: complex_logic.c.tmpl  host_arith.c.tmpl
utils/programs/constenc/: basic.c.tmpl  traps.c.tmpl
utils/programs/edge/: indirectbr_cgoto.c.tmpl  int_widths.c.tmpl  loops_nested.c.tmpl  recursion_direct.c.tmpl  recursion_mutual.c.tmpl  struct_value.c.tmpl  switch_jumptable.c.tmpl  switch_sparse.c.tmpl  tail_calls.c.tmpl  vector_i32x4.c.tmpl
utils/programs/eh/: throw_catch.cpp.tmpl
utils/programs/fmerge/: basic.c.tmpl  combo.c.tmpl  thunk.c.tmpl
utils/programs/strenc/: basic.c.tmpl  minlen.c.tmpl  multi.c.tmpl  xor_fallback.c.tmpl
utils/programs/vm/: call.c.tmpl  call_i64_args.c.tmpl  call_i64_ret.c.tmpl  call_vararg.c.tmpl  casts.c.tmpl  float_basic.c.tmpl  float_cast.c.tmpl  float_comprehensive.c.tmpl  float_fcmp.c.tmpl  float_mem.c.tmpl  float_ret.c.tmpl  gep_chain.c.tmpl  i64_ops.c.tmpl  i64_ret_highslot.c.tmpl  icmp.c.tmpl  memory.c.tmpl  multi_fn_aes.c.tmpl  multi_function.c.tmpl  multiblock.c.tmpl  switch_dispatch.c.tmpl
utils/runner/: cli.py  config.py  cross.py  fmt.py  pipeline.py  targets.py  util.py
utils/runner/reporter/: console.py  html.py  json_report.py
